2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/mixer_applet2.xml: Fix build.

2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* applet.c:
	* applet.c:
	- icon related cleanups
	- fix icon resizing
	Patches from Matthias Clasen

2006-09-04  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	* docs/sv/figures/*png: Removed old screenshots.

2006-08-21  Paolo Borelli  <pborelli@katamail.com>

	* preferences.c: plug a couple of memory leaks.

2006-07-31  Ronald S. Bultje,,,  <rbultje@gnome.org>

	* applet.c: (gnome_volume_applet_init):
	  Set accessibility name (#337059).

2006-07-25  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Small update of French translation

2006-07-23  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Updated Swedish translation.
	* docs/sv/legal.xml: Removed obsolete file.
	
2006-07-10  Rodney Dawes  <dobey@novell.com>

	* GNOME_MixerApplet.server.in.in: Use multimedia-volume-control as the
	icon name instead of volume-knob
	
	* applet.c (init_pixbuf): Use the audio-volume-* icon names from the
	icon naming specification
	(gnome_volume_applet_init): Use multimedia-volume-control instead of
	volume-knob as the icon name for the window icon
	(cb_verb): Use multimedia-volume-control as the logo-icon-name

	Fixes #346483
	
2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-06-17  Stefan Kost  <ensonic@users.sf.net>

	* applet.h:
	* dock.h:
	* preferences.h:
	Correct GObject macros, fixes #341457

2006-06-01  Manjunath K V  <manjunath.kadajji@wipro.com>
	* GNOME_MixerApplet.xml: Changed the mnemonic for 'Mute' in volume
	applet to 'T' since 'M' was already used by Move.
	Fixes bug #332467.

2006-04-07  Tim-Philipp Müller  <tim at centricular dot net>

	* applet.c: (gnome_volume_applet_dispose):