@@ -1,3 +1,8 @@
+2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* applet.c: Also use left/right key to change volume.
+	Patch from Jerry Tan. Closes bug 353644.
+
 2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* docs/C/mixer_applet2.xml: Fix build.
